// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContactsHeader > should render responsive 1`] = `
<DocumentFragment>
  <section
    class="h-13 flex w-full items-center justify-between bg-theme-secondary-100 px-8 py-1.5 dark:bg-black"
  >
    <h1
      class="mb-0 text-lg"
    >
      My Contacts
    </h1>
    <div
      class="items-top flex justify-end"
    >
      <div
        class="flex items-center text-theme-primary-200"
      >
        <div
          class="relative -my-2"
          data-testid="HeaderSearchBar"
        >
          <div
            class="group"
          >
            <button
              class="relative flex cursor-pointer items-center justify-center font-semibold text-theme-secondary-700 transition-colors duration-200 focus:outline-none disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:text-theme-secondary-500 disabled:dark:text-theme-secondary-700 hover:bg-theme-primary-100 hover:dark:text-white hover:text-theme-primary-400 rounded px-2 py-1.5 ring-focus"
              type="button"
            >
              <div
                class="flex h-5 items-center gap-2"
              >
                <span
                  class="hidden md:block"
                >
                  Search
                </span>
                <div>
                  <div
                    style="height: 20px; width: 20px;"
                  >
                    <svg
                      fill="none"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        clip-path="url(#clip0_13375_36442)"
                        id="Vertical container"
                      >
                        <g
                          id="Vertical container_2"
                        >
                          <path
                            d="M10.5038 13.9035C13.7838 12.5435 15.3038 8.70355 13.9438 5.50355C12.5838 2.22355 8.74379 0.783547 5.54379 2.06355C2.34379 3.34355 0.743788 7.26355 2.10379 10.4635C3.54379 13.7435 7.22379 15.2635 10.5038 13.9035Z"
                            id="Vector"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="1.6"
                          />
                          <path
                            d="M12.8281 12.7832L14.4281 14.3832"
                            id="Vector_2"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="1.6"
                          />
                        </g>
                      </g>
                      <defs>
                        <clippath
                          id="clip0_13375_36442"
                        >
                          <rect
                            fill="transparent"
                            height="16"
                            width="16"
                          />
                        </clippath>
                      </defs>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </div>
        <span
          class="mx-0.5 flex md:ml-3.5"
        >
          <div
            class="h-5 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
          />
        </span>
      </div>
      <button
        class="-mr-2.5 p-2.5"
        type="button"
      >
        <div
          class="text-theme-primary-300 dark:text-theme-secondary-600"
        >
          <div
            style="height: 20px; width: 20px;"
          >
            <svg
              id="plus"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M1 10h18M10 1v18"
                />
              </g>
            </svg>
          </div>
        </div>
      </button>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ContactsHeader > should render responsive 2`] = `
<DocumentFragment>
  <div
    class="w-full py-4 first:pt-8 last:pb-8 border-theme-secondary-300 dark:border-theme-secondary-800 hasBorder css-1wpbo18"
  >
    <div
      class="mx-auto px-6 lg:container md:px-10"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div
          class="space-y-2"
        >
          <div
            class="flex items-center gap-3"
          >
            <h1
              class="mb-0 text-2xl leading-[29px]"
              data-testid="header__title"
            >
              My Contacts
            </h1>
          </div>
          <div
            class="flex items-center leading-5 text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            Manage your frequent Contacts
          </div>
        </div>
        <div>
          <div
            class="items-top flex justify-end"
          >
            <div
              class="flex items-center text-theme-primary-200"
            >
              <div
                class="relative -my-2"
                data-testid="HeaderSearchBar"
              >
                <div
                  class="group"
                >
                  <button
                    class="relative flex cursor-pointer items-center justify-center font-semibold text-theme-secondary-700 transition-colors duration-200 focus:outline-none disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:text-theme-secondary-500 disabled:dark:text-theme-secondary-700 hover:bg-theme-primary-100 hover:dark:text-white hover:text-theme-primary-400 rounded px-2 py-1.5 ring-focus"
                    type="button"
                  >
                    <div
                      class="flex h-5 items-center gap-2"
                    >
                      <span
                        class="hidden md:block"
                      >
                        Search
                      </span>
                      <div>
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            fill="none"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              clip-path="url(#clip0_13375_36442)"
                              id="Vertical container"
                            >
                              <g
                                id="Vertical container_2"
                              >
                                <path
                                  d="M10.5038 13.9035C13.7838 12.5435 15.3038 8.70355 13.9438 5.50355C12.5838 2.22355 8.74379 0.783547 5.54379 2.06355C2.34379 3.34355 0.743788 7.26355 2.10379 10.4635C3.54379 13.7435 7.22379 15.2635 10.5038 13.9035Z"
                                  id="Vector"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="1.6"
                                />
                                <path
                                  d="M12.8281 12.7832L14.4281 14.3832"
                                  id="Vector_2"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="1.6"
                                />
                              </g>
                            </g>
                            <defs>
                              <clippath
                                id="clip0_13375_36442"
                              >
                                <rect
                                  fill="transparent"
                                  height="16"
                                  width="16"
                                />
                              </clippath>
                            </defs>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <span
                class="mx-0.5 flex md:ml-3.5"
              >
                <div
                  class="h-5 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
                />
              </span>
            </div>
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 green:hover:bg-theme-primary-700 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 ml-6"
              data-testid="contacts__add-contact-btn"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Add Contact
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContactsHeaderExtra > should render responsive 1`] = `
<DocumentFragment>
  <div
    class="items-top flex justify-end"
  >
    <div
      class="flex items-center text-theme-primary-200"
    >
      <div
        class="relative -my-2"
        data-testid="HeaderSearchBar"
      >
        <div
          class="group"
        >
          <button
            class="relative flex cursor-pointer items-center justify-center font-semibold text-theme-secondary-700 transition-colors duration-200 focus:outline-none disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:text-theme-secondary-500 disabled:dark:text-theme-secondary-700 hover:bg-theme-primary-100 hover:dark:text-white hover:text-theme-primary-400 rounded px-2 py-1.5 ring-focus"
            type="button"
          >
            <div
              class="flex h-5 items-center gap-2"
            >
              <span
                class="hidden md:block"
              >
                Search
              </span>
              <div>
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    fill="none"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_13375_36442)"
                      id="Vertical container"
                    >
                      <g
                        id="Vertical container_2"
                      >
                        <path
                          d="M10.5038 13.9035C13.7838 12.5435 15.3038 8.70355 13.9438 5.50355C12.5838 2.22355 8.74379 0.783547 5.54379 2.06355C2.34379 3.34355 0.743788 7.26355 2.10379 10.4635C3.54379 13.7435 7.22379 15.2635 10.5038 13.9035Z"
                          id="Vector"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.6"
                        />
                        <path
                          d="M12.8281 12.7832L14.4281 14.3832"
                          id="Vector_2"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.6"
                        />
                      </g>
                    </g>
                    <defs>
                      <clippath
                        id="clip0_13375_36442"
                      >
                        <rect
                          fill="transparent"
                          height="16"
                          width="16"
                        />
                      </clippath>
                    </defs>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
      </div>
      <span
        class="mx-0.5 flex md:ml-3.5"
      >
        <div
          class="h-5 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
        />
      </span>
    </div>
    <button
      class="-mr-2.5 p-2.5"
      type="button"
    >
      <div
        class="text-theme-primary-300 dark:text-theme-secondary-600"
      >
        <div
          style="height: 20px; width: 20px;"
        >
          <svg
            id="plus"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <path
                d="M1 10h18M10 1v18"
              />
            </g>
          </svg>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`ContactsHeaderExtra > should render responsive 2`] = `
<DocumentFragment>
  <div
    class="items-top flex justify-end"
  >
    <div
      class="flex items-center text-theme-primary-200"
    >
      <div
        class="relative -my-2"
        data-testid="HeaderSearchBar"
      >
        <div
          class="group"
        >
          <button
            class="relative flex cursor-pointer items-center justify-center font-semibold text-theme-secondary-700 transition-colors duration-200 focus:outline-none disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:text-theme-secondary-500 disabled:dark:text-theme-secondary-700 hover:bg-theme-primary-100 hover:dark:text-white hover:text-theme-primary-400 rounded px-2 py-1.5 ring-focus"
            type="button"
          >
            <div
              class="flex h-5 items-center gap-2"
            >
              <span
                class="hidden md:block"
              >
                Search
              </span>
              <div>
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    fill="none"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_13375_36442)"
                      id="Vertical container"
                    >
                      <g
                        id="Vertical container_2"
                      >
                        <path
                          d="M10.5038 13.9035C13.7838 12.5435 15.3038 8.70355 13.9438 5.50355C12.5838 2.22355 8.74379 0.783547 5.54379 2.06355C2.34379 3.34355 0.743788 7.26355 2.10379 10.4635C3.54379 13.7435 7.22379 15.2635 10.5038 13.9035Z"
                          id="Vector"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.6"
                        />
                        <path
                          d="M12.8281 12.7832L14.4281 14.3832"
                          id="Vector_2"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.6"
                        />
                      </g>
                    </g>
                    <defs>
                      <clippath
                        id="clip0_13375_36442"
                      >
                        <rect
                          fill="transparent"
                          height="16"
                          width="16"
                        />
                      </clippath>
                    </defs>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
      </div>
      <span
        class="mx-0.5 flex md:ml-3.5"
      >
        <div
          class="h-5 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
        />
      </span>
    </div>
    <button
      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 green:hover:bg-theme-primary-700 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 ml-6"
      data-testid="contacts__add-contact-btn"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Add Contact
      </div>
    </button>
  </div>
</DocumentFragment>
`;
